Collated code Varun and moved author tags for others

--- a/collated/main/A0139621H.md
+++ b/collated/main/A0139621H.md
@@ -59,7 +59,7 @@
 ```
 ###### /java/seedu/manager/logic/parser/Parser.java
 ``` java
-     * 
+    /**
      * Parses arguments in the context of the find task command.
      * @param args full command args string
      * @return the prepared command
@@ -81,6 +81,7 @@
 ```
 ###### /java/seedu/manager/model/task/Desc.java
 ``` java
+    /**
      * Checks if any words from the task's venue matches that with the search function's input words
      */
     @Override
@@ -99,6 +100,7 @@
 ```
 ###### /java/seedu/manager/model/task/Done.java
 ``` java
+    /**
      * Checks if the task property matches with that of the search function's input
      */
     @Override
@@ -111,6 +113,7 @@
 ```
 ###### /java/seedu/manager/model/task/EndTime.java
 ``` java
+/**
  * Represents a Task's end time.
  * Guarantees: immutable; is valid as declared in {@link #isValid(String)}
  */
@@ -123,6 +126,7 @@ public class EndTime extends Time {
 ```
 ###### /java/seedu/manager/model/task/Priority.java
 ``` java
+    /**
      * Checks if the task property matches with that of the search function's input
      */
     @Override
@@ -133,8 +137,14 @@ public class EndTime extends Time {
     }
     
 ```
+###### /java/seedu/manager/model/task/ReadOnlyTask.java
+``` java
+    public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> otherProps);
+}
+```
 ###### /java/seedu/manager/model/task/StartTime.java
 ``` java
+/**
  * Represents a Task's start time.
  * Guarantees: immutable; is valid as declared in {@link #isValid(String)}
  */
@@ -199,17 +209,37 @@ public class StartTime extends Time {
 		}
     }
 
-	public boolean isBefore(Date now) {
-	
-		if (value.before(now)) {
+	public boolean isBefore(Date time) {
+		if (value.before(time)) {
 			return true;
 		}
 		return false;
+	}
+	
+	public boolean isAfter(Date time) {
+		if (value.after(time)) {
+			return true;
+		}
+		return false;
+	}
+	
+	@Override
+	public int compareTo(TaskProperty other) {
+		assert other instanceof Time;
+		
+		if (this.isBefore(((Time) other).getTime())) {
+			return -1;
+		} else if (this.isAfter(((Time) other).getTime())) {
+			return 1;
+		} else {
+			return 0;
+		}
 	}
 }
 ```
 ###### /java/seedu/manager/model/task/Venue.java
 ``` java
+    /**
      * Checks if any words from the task's venue matches that with the search function's input words
      */
     @Override
@@ -225,12 +255,4 @@ public class StartTime extends Time {
         return false;
     }
 
-    //@@ author
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof Venue // instanceof handles nulls
-                && this.value.equals(((Venue) other).value)); // state check
-    }
-}
 ```
