--- a/collated/main/A0148042M.md
+++ b/collated/main/A0148042M.md
@@ -29,9 +29,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         assert model != null;
         try {
             model.addTask(toAdd);
-            if (toAdd.getTag().isPresent()) {
-                model.addTag((Tag) toAdd.getTag().get());
-            }
+            addTasksTagToModel(toAdd);
             jumpToTask(toAdd);
             
             this.addUndo(this);
@@ -52,6 +50,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
 ```
 ###### /java/seedu/manager/logic/parser/ExtensionParser.java
 ``` java
+    /**
      * Parses events and puts the times into the properties
      * Throw an exception if start time is after end time
      * 
@@ -111,11 +110,6 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         this.userPrefs = userPrefs;
     }
     
-    // @author
-    public ModelManager() {
-        this(new TaskManager(), new UserPrefs());
-    }
-    
 ```
 ###### /java/seedu/manager/model/ModelManager.java
 ``` java
@@ -127,7 +121,7 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         sortedTags = new SortedList<>(filteredTags);
         this.userPrefs = userPrefs;
         
-        sortSortedFilteredTaskListByProperty(TaskProperties.DONE);
+        sortSortedFilteredTaskListByTime();
     }
     
 ```
@@ -141,7 +135,6 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
             e.printStackTrace();
         }
         updateFilteredTagListToShowAll();
-//        indicateTaskManagerChanged();
     }
     
 ```
@@ -159,60 +152,6 @@ public class TagPanelSelectionChangedEvent extends BaseEvent {
         filteredTags.setPredicate(null);
     }
     
-    // @author
-    @Override
-    public void updateFilteredTaskList(HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch) {
-        updateFilteredTaskList(new PredicateExpression(new EnhancedSearchQualifier(propertiesToMatch)));
-    }
-    
-    private void updateFilteredTaskList(Expression expression) {
-        filteredTasks.setPredicate(expression::satisfies);
-    }
-
-    //========== Inner classes/interfaces used for filtering ==================================================
-
-    interface Expression {
-        boolean satisfies(ReadOnlyTask task);
-        String toString();
-    }
-
-    private class PredicateExpression implements Expression {
-
-        private final Qualifier qualifier;
-
-        PredicateExpression(Qualifier qualifier) {
-            this.qualifier = qualifier;
-        }
-
-        @Override
-        public boolean satisfies(ReadOnlyTask task) {
-            return qualifier.run(task);
-        }
-
-        @Override
-        public String toString() {
-            return qualifier.toString();
-        }
-    }
-
-    interface Qualifier {
-        boolean run(ReadOnlyTask task);
-        String toString();
-    }
-
-    private class EnhancedSearchQualifier implements Qualifier {
-        private HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch;
-        
-        public EnhancedSearchQualifier(HashMap<TaskProperties, Optional<TaskProperty>> propertiesToMatch) {
-            this.propertiesToMatch = propertiesToMatch;
-        }
-        
-        @Override
-        public boolean run(ReadOnlyTask task) {
-            return task.matches(propertiesToMatch);
-        }
-    }
-}
 ```
 ###### /java/seedu/manager/model/tag/UniqueTagList.java
 ``` java
@@ -371,9 +310,6 @@ public class Tag extends TaskProperty {
     public static final String TAG_VALIDATION_REGEX = ".+";
 
     public String tagName;
-
-//    public Tag() {
-//    }
 
     /**
      * Validates given tag name.
@@ -665,7 +601,6 @@ public class MainWindow extends UiPart {
 ```
 ###### /java/seedu/manager/ui/TagCard.java
 ``` java
- */
 public class TagCard extends UiPart{
 
     private static final String FXML = "TagListCard.fxml";
@@ -723,6 +658,7 @@ public class TagCard extends UiPart{
 ```
 ###### /java/seedu/manager/ui/TagListPanel.java
 ``` java
+/**
  * Panel containing the list of tasks.
  */
 public class TagListPanel extends UiPart {
