--- a/collated/test/A0139621H.md
+++ b/collated/test/A0139621H.md
@@ -32,7 +32,7 @@ public class FindCommandTest extends TaskManagerGuiTest {
 
         //find after deleting one result
         commandBox.runCommand("delete 2");
-        assertFindResult("find venue School of Computing", td.alpha, td.charlie);
+        assertFindResult("find venue School of Computing", td.beta, td.charlie);
     }
     
     @Test
@@ -41,14 +41,17 @@ public class FindCommandTest extends TaskManagerGuiTest {
 
         //find after deleting one result
         commandBox.runCommand("delete 3");
-        assertFindResult("find from 8pm to 10pm", td.alpha, td.foxtrot);
+        assertFindResult("find from 8pm to 10pm", td.alpha, td.echo);
     }
 
-    private void assertFindResult(String command, TestTask... expectedHits ) {
+    private void assertFindResult(String command, TestTask... expectedHits) {
         commandBox.runCommand(command);
         assertListSize(expectedHits.length);
         assertResultMessage(expectedHits.length + " tasks listed!");
+        TestUtil.sortListByTime(expectedHits);
         assertTrue(taskListPanel.isListMatching(expectedHits));
     }
 }
+
+
 ```
