--- a/collated/main/A0147924X.md
+++ b/collated/main/A0147924X.md
@@ -10,9 +10,9 @@ public class CommandWord {
 	public enum Commands {
 		ADD("add"), EDIT("edit"), DELETE("delete"), UNDO("undo"), 
 		FIND("find"), STORAGE("storage"), CLEAR("clear"), DONE("done"), 
-		EXIT("exit"), HELP("help"), LIST("list"), SORT("sort"),
-		UNSORT("unsort"), ALIAS("alias"), BY("by"), AT("at"), 
-		EVENT("from"), PRIORITY("priority"), TAG("tag"), VENUE("venue");
+		EXIT("exit"), HELP("help"), LIST("list"), SORTBY("sortby"),
+		ALIAS("alias"), BY("by"), AT("at"), EVENT("from"), 
+		PRIORITY("priority"), TAG("tag"), VENUE("venue");
 		
 		private String commandRep;
 		
@@ -276,6 +276,26 @@ public class AliasCommand extends Command implements UndoableCommand {
         EventsCenter.getInstance().post(new JumpToTaskListRequestEvent(taskIndex));
     }
     
+    /**
+     * Adds a task's tag to the tag list in the model
+     * @param task Task whose tag should be added
+     */
+    protected void addTasksTagToModel(ReadOnlyTask task) {
+    	if (task.getTag().isPresent()) {
+            model.addTag((Tag) task.getTag().get());
+        }
+    }
+    
+    /**
+     * Delete a task's tag from the tag list in the model
+     * @param task Task whose tag should be deleted
+     */
+    protected void deleteTasksTagFromModel(ReadOnlyTask task) {
+    	if(task.getTag().isPresent()) {
+    		model.deleteTag((Tag) task.getTag().get());
+    	}
+    }
+    
 ```
 ###### /java/seedu/manager/logic/commands/DoneCommand.java
 ``` java
@@ -337,6 +357,7 @@ public class DoneCommand extends Command implements UndoableCommand {
 ```
 ###### /java/seedu/manager/logic/commands/DoneCommand.java
 ``` java
+	/**
 	 * Marks the done property of a task
 	 * @param taskToMark The task which should be marked
 	 * @param isDone Whether it should be marked as done or not done
@@ -407,12 +428,8 @@ public class EditCommand extends Command implements UndoableCommand {
             model.addTask(newTask);
             model.deleteTask(taskToEdit);
             
-            if(newTask.getTag().isPresent()) {
-                model.addTag((Tag) newTask.getTag().get());
-            }
-            if(taskToEdit.getTag().isPresent()) {
-                model.deleteTag((Tag) taskToEdit.getTag().get());
-            }
+            addTasksTagToModel(newTask);
+            deleteTasksTagFromModel(taskToEdit);
             
             jumpToTask(newTask);
             this.addUndo(this);
@@ -542,9 +559,8 @@ public class HelpCommand extends Command {
 		usageMessages.put(Commands.FIND, FindCommand.MESSAGE_USAGE);
 		usageMessages.put(Commands.HELP, HelpCommand.MESSAGE_USAGE);
 		usageMessages.put(Commands.LIST, ListCommand.MESSAGE_USAGE);
-		usageMessages.put(Commands.SORT, SortCommand.MESSAGE_USAGE);
+		usageMessages.put(Commands.SORTBY, SortCommand.MESSAGE_USAGE);
 		usageMessages.put(Commands.STORAGE, StorageCommand.MESSAGE_USAGE);
-		usageMessages.put(Commands.UNSORT, UnSortCommand.MESSAGE_USAGE);
 		usageMessages.put(Commands.UNDO, UndoCommand.MESSAGE_USAGE);
 		
 		usageMessages.put(Commands.AT, MESSAGE_AT_USAGE);
@@ -611,29 +627,52 @@ public class HelpCommand extends Command {
  * Allows user to sort the displayed tasks by priority
  *
  */	
-public class SortCommand extends Command implements UndoableCommand{
-	public static final String COMMAND_WORD = "sort";
+public class SortCommand extends Command {
+	public static final String COMMAND_WORD = "sortby";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD
             + ": Sorts the displayed tasks by priority, from highest to lowest. Tasks with no priority are shown last.\n"
             + "Example: " + COMMAND_WORD;
 
-    public static final String MESSAGE_SUCCESS = "Sorted task list.";
-    public static final String UNDO_SUCCESS = "Unsorted task list.";
+    public static final String MESSAGE_SUCCESS = "Sorted task list by %1$s";
+    public static final String MESSAGE_NOT_A_COMPARATOR = "This is not a valid property to sort by";
     
-    public SortCommand() {}
+    public static enum SortComparators {
+    	TIME("time"), PRIORITY("priority");
+    	
+    	private String value;
+    	
+    	private SortComparators(String value) {
+			this.value = value;
+		}
+    	
+    	public String getValue() {
+    		return value;
+    	}
+    }
+    
+    private SortComparators comparator;
+    
+    public SortCommand(SortComparators comparator) {
+    	this.comparator = comparator;
+    }
 
 	@Override
 	public CommandResult execute() {
-		model.sortSortedFilteredTaskListByProperty(TaskProperties.PRIORITY);
-		this.addUndo(this);
-		return new CommandResult(MESSAGE_SUCCESS);
-	}
+		switch (comparator) {
+		case PRIORITY:
+			model.sortSortedFilteredTaskListByPriority();
+			break;
+		
+		case TIME:
+			model.sortSortedFilteredTaskListByTime();
+			break;
 
-	@Override
-	public CommandResult undoIt() {
-		model.unSortSortedFilteredTaskList();
-	    return new CommandResult(UNDO_SUCCESS);
+		default:
+			return new CommandResult(MESSAGE_NOT_A_COMPARATOR);
+		}
+		
+		return new CommandResult(String.format(MESSAGE_SUCCESS, comparator.getValue()));
 	}
 }
 ```
@@ -716,38 +755,6 @@ public class StorageCommand extends Command {
 		} catch (Exception e) {
 			return false;
 		}
-	}
-}
-```
-###### /java/seedu/manager/logic/commands/UnSortCommand.java
-``` java
-/**
- * Allows user to unsort the displayed tasks, placing completed tasks at the bottom
- *
- */	
-public class UnSortCommand extends Command implements UndoableCommand {
-	public static final String COMMAND_WORD = "unsort";
-
-    public static final String MESSAGE_USAGE = COMMAND_WORD
-            + ": Unsorts the task list, moving done tasks to the bottom.\n"
-            + "Example: " + COMMAND_WORD;
-
-    public static final String MESSAGE_SUCCESS = "Unsorted task list.";
-    public static final String UNDO_SUCCESS = "Sorted task list.";
-    
-    public UnSortCommand() {}
-
-	@Override
-	public CommandResult execute() {
-		model.unSortSortedFilteredTaskList();;
-		this.addUndo(this);
-		return new CommandResult(MESSAGE_SUCCESS);
-	}
-
-	@Override
-	public CommandResult undoIt() {
-		model.sortSortedFilteredTaskListByProperty(TaskProperties.PRIORITY);
-	    return new CommandResult(UNDO_SUCCESS);
 	}
 }
 ```
@@ -971,7 +978,6 @@ public class ExtensionParser {
         throwExceptionIfTimeInvalid(startTime, endTime);
     }
     
-    /**
 ```
 ###### /java/seedu/manager/logic/parser/ExtensionParser.java
 ``` java
@@ -1085,11 +1091,8 @@ public class Parser {
         case STORAGE:
             return new StorageCommand(arguments);
         
-        case SORT:
-        	return new SortCommand();
-        
-        case UNSORT:
-        	return new UnSortCommand();
+        case SORTBY:
+        	return prepareSort(arguments);
         
         case UNDO:
         	return new UndoCommand();
@@ -1136,6 +1139,31 @@ public class Parser {
 ###### /java/seedu/manager/logic/parser/Parser.java
 ``` java
     /**
+     * Parses arguments in the context of the edit task command.
+     * @param args full command args string
+     * @return the prepared command 
+     */
+    private Command prepareEdit(String args) {
+        final Matcher matcher = EDIT_KEYWORDS_FORMAT.matcher(args);
+        if(!matcher.matches()){
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
+        }
+        
+        Optional<Integer> index = parseIndex(matcher.group("targetIndex"));
+        if(!index.isPresent()){
+            return new IncorrectCommand(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
+        }
+        
+        try {
+            return new EditCommand(index.get(), extParser.getTaskProperties(matcher.group("arguments")));
+        } catch (IllegalValueException e) {
+            return new IncorrectCommand(e.getMessage());
+        } 
+    }
+    
+    /**
      * Parses arguments in the context of the done task command
      * @param args full commmand args string
      * @return the prepared command
@@ -1160,6 +1188,7 @@ public class Parser {
      */
     private Command prepareAlias(String args) {
     	String[] splitArgs = args.trim().split(" ");
+    	
     	if (splitArgs.length != 2) {
 			return new IncorrectCommand(AliasCommand.MESSAGE_WRONG_NUM_ARGS);
 		}
@@ -1174,8 +1203,7 @@ public class Parser {
      */
     private Command prepareHelp(String args) {
     	String[] splitArgs = args.trim().split(" ");
-    	System.out.println(splitArgs.length);
-    	System.out.println(splitArgs);
+    	
     	if (splitArgs.length > 1) {
 			return new IncorrectCommand(HelpCommand.MESSAGE_WRONG_NUM_ARGS);
 		} else if (splitArgs.length == 1 && !splitArgs[0].equals("")) {
@@ -1184,14 +1212,37 @@ public class Parser {
 			return new HelpCommand(Optional.empty());
 		}
     }
+    
+    /**
+     * Parses arguments in the context of the sort command
+     * @param args full command args string
+     * @return the prepared command
+     */
+    private Command prepareSort(String args) {
+    	args = args.trim();
+    	
+    	for (SortCommand.SortComparators comparator : SortCommand.SortComparators.values()) {
+			if (args.equals(comparator.getValue())) {
+				return new SortCommand(comparator);
+			}
+		}
+    	
+    	return new IncorrectCommand(SortCommand.MESSAGE_NOT_A_COMPARATOR);
+    }
 }
 ```
 ###### /java/seedu/manager/model/Model.java
 ``` java
-    /** Returns the Command words */
+    /**
+     * Retrieves command keywords from the user preferences
+     * @return the command keywords
+     */
     HashMap<Commands, String> getCommandWords();
     
-    /** Returns the Extension words */
+    /**
+     * Retrieves extension keywords from the user preferences
+     * @return the extension keywords
+     */
     HashMap<Commands, String> getExtensionWords();
     
 ```
@@ -1228,11 +1279,11 @@ public class Parser {
 ```
 ###### /java/seedu/manager/model/Model.java
 ``` java
-    /** Sorts the sorted and filtered task list by a certain property */
-    void sortSortedFilteredTaskListByProperty(TaskProperties property);
+    /** Sorts the sorted and filtered task list by priority */
+    void sortSortedFilteredTaskListByPriority();
     
-    /** Unsorts the sorted and filtered task list */
-    void unSortSortedFilteredTaskList();
+    /** Sorts the sorted and filtered task list by time */
+    void sortSortedFilteredTaskListByTime();
     
     /** 
      * Get the index of a specified tag in the list currently being displayed
@@ -1244,16 +1295,11 @@ public class Parser {
 ```
 ###### /java/seedu/manager/model/ModelManager.java
 ``` java
-     * Retrieves command words from the user preferences
-     */
     public HashMap<Commands, String> getCommandWords() {
     	return userPrefs.commandWords;
     }
     
     @Override
-    /**
-     * Retrieves extension words from the user preferences
-     */
     public HashMap<Commands, String> getExtensionWords() {
     	return userPrefs.extensionWords;
     }
@@ -1295,13 +1341,29 @@ public class Parser {
     }
     
     @Override
-    public void sortSortedFilteredTaskListByProperty(TaskProperties property) {
-    	sortedTasks.setComparator((Task t1, Task t2) -> t1.compareProperty(t2, property));
+    public void sortSortedFilteredTaskListByPriority() {
+    	Comparator<ReadOnlyTask> priorityComparator = (t1, t2) -> {
+    		int doneCompare = t1.compareDone(t2);
+    		if (doneCompare != 0) {
+				return doneCompare;
+			} else {
+				return t1.comparePriority(t2);
+			}
+    	};
+    	sortedTasks.setComparator(priorityComparator);
     }
     
     @Override
-    public void unSortSortedFilteredTaskList() {
-    	sortSortedFilteredTaskListByProperty(TaskProperties.DONE);
+    public void sortSortedFilteredTaskListByTime() {
+    	Comparator<ReadOnlyTask> timeComparator = (t1, t2) -> {
+    		int doneCompare = t1.compareDone(t2);
+    		if (doneCompare != 0) {
+				return doneCompare;
+			} else {
+				return t1.compareTime(t2);
+			}
+    	};
+    	sortedTasks.setComparator(timeComparator);
     }
     
     @Override
@@ -1333,7 +1395,6 @@ public class Parser {
 		}
     }
     
-    /**
 ```
 ###### /java/seedu/manager/model/task/Done.java
 ``` java
@@ -1356,7 +1417,6 @@ public class Parser {
         return value ? "\u2713" : "";
     }
     
-    /**
 ```
 ###### /java/seedu/manager/model/task/Done.java
 ``` java
@@ -1409,7 +1469,6 @@ public class Parser {
         return value.value;
     }
     
-    /**
 ```
 ###### /java/seedu/manager/model/task/Priority.java
 ``` java
@@ -1444,7 +1503,6 @@ public class Parser {
                 && other.getTag().equals(this.getTag());
     }
 
-    /**
 ```
 ###### /java/seedu/manager/model/task/ReadOnlyTask.java
 ``` java
@@ -1474,16 +1532,85 @@ public class Parser {
     }
     
     /**
-     * Compares two tasks using a certain property (for sorting)
-     * @param other Other task
-     * @param property Property to be compared on
-     * @return -1 if this is smaller, 0 if equal, 1 is this is larger
+     * Compares a certain property of one task with a certain property of another task
+     * @param firstTask First task to compare
+     * @param secondTask Second task to compare
+     * @param firstProperty Property of first task to compare
+     * @param secondProperty Property of second task to compare
+     * @param isNoPropertyHigh Whether empty property is higher than a valid property
+     * @return -1 if first task is smaller, 0 if equal, 1 if first task is larger
      */
-    public int compareProperty(ReadOnlyTask other, TaskProperties property);
+    public static int compareProperty(ReadOnlyTask firstTask, ReadOnlyTask secondTask, 
+    								   TaskProperties firstProperty, TaskProperties secondProperty,
+    								   boolean isNoPropertyHigh) {
+    	assert firstTask != null && secondTask != null;
+    	HashMap<TaskProperties, Optional<TaskProperty>> firstProps = firstTask.getProperties();
+    	HashMap<TaskProperties, Optional<TaskProperty>> secondProps = secondTask.getProperties();
+    	
+    	int noPropertyMultiplier = isNoPropertyHigh ? 1 : -1;
+    	
+    	if (!firstProps.get(firstProperty).isPresent() && !secondProps.get(secondProperty).isPresent()) {
+    		return 0;
+    	} else if (!firstProps.get(firstProperty).isPresent()) {
+    		return 1 * noPropertyMultiplier;
+    	} else if (!secondProps.get(secondProperty).isPresent()) {
+    		return -1 * noPropertyMultiplier;
+    	} else {
+    		return firstProps.get(firstProperty).get().compareTo(secondProps.get(secondProperty).get());
+    	}
+    }
     
-    // @author A0139621H
-    public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> other);
-}
+    /**
+     * Compares priority of this task with another task
+     * @param other Other task
+     * @return -1 if this priority is lower, 1 if this priority is higher (no priority is higher)
+     * and 0 if they are the same
+     */
+    default public int comparePriority(ReadOnlyTask other) {
+    	assert other != null;
+    	
+    	return compareProperty(this, other, TaskProperties.PRIORITY, TaskProperties.PRIORITY, true);
+    }
+    
+    /**
+     * Compares time of this task with another task
+     * @param other Other task
+     * @return -1 if this task's time is before the other task's (no time is lowest), 1 if this time is after
+     * the other task's time and 0 if they are the same
+     */
+    default public int compareTime(ReadOnlyTask other) {
+    	assert other != null;
+    	HashMap<TaskProperties, Optional<TaskProperty>> thisProps = this.getProperties();
+    	HashMap<TaskProperties, Optional<TaskProperty>> otherProps = other.getProperties();
+    	
+    	if (thisProps.get(TaskProperties.ENDTIME).isPresent() && otherProps.get(TaskProperties.ENDTIME).isPresent()) {
+			int endTimeCompare = compareProperty(this, other, TaskProperties.ENDTIME, TaskProperties.ENDTIME, false);
+			if (endTimeCompare != 0) {
+				return endTimeCompare;
+			} else {
+				return compareProperty(this, other, TaskProperties.STARTTIME, TaskProperties.STARTTIME, false);
+			}
+		} else if (!thisProps.get(TaskProperties.ENDTIME).isPresent() && !otherProps.get(TaskProperties.ENDTIME).isPresent()) {
+			return compareProperty(this, other, TaskProperties.STARTTIME, TaskProperties.STARTTIME, false);
+		} else if (!otherProps.get(TaskProperties.ENDTIME).isPresent()) {
+			return compareProperty(this, other, TaskProperties.ENDTIME, TaskProperties.STARTTIME, false);
+		} else {
+			return compareProperty(this, other, TaskProperties.STARTTIME, TaskProperties.ENDTIME, false);
+		}
+    }
+    
+    /**
+     * Compares the done property of this task with another task
+     * @param other Other task
+     * @return Not done is considered to be "larger" than done. 1 returned if this task is larger,
+     * -1 if other task is larger, 0 if they are the same
+     */
+    default public int compareDone(ReadOnlyTask other) {
+    	assert other != null;
+    	
+    	return compareProperty(this, other, TaskProperties.DONE, TaskProperties.DONE, true);
+    }
+    
 ```
 ###### /java/seedu/manager/model/task/Task.java
 ``` java
@@ -1617,14 +1744,23 @@ public class Parser {
 ###### /java/seedu/manager/model/task/Task.java
 ``` java
     @Override
-    public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> other) {
+    /**
+     * Checks whether given properties "match" against this task. Properties match if there's a fuzzy
+     * relationship between them. For an understanding of how different properties "match", see the
+     * overridden method matches in the respective task property classes
+     * @param otherProps The properties to match against
+     * @return Whether the task matches these properties or not
+     */
+    public boolean matches(HashMap<TaskProperties, Optional<TaskProperty>> otherProps) {
+    	HashMap<TaskProperties, Optional<TaskProperty>> thisProps = this.getProperties();
+    	
         for (TaskProperties property : TaskProperties.values()) {
-            if (other.get(property).isPresent()) {
-                if (!this.properties.get(property).isPresent()) {
-                	if (!matchStartOrEndTime(other, property)) {
+            if (otherProps.get(property).isPresent()) {
+                if (!thisProps.get(property).isPresent()) {
+                	if (!matchStartOrEndTime(otherProps, property)) {
 						return false;
 					}
-                } else if (!this.properties.get(property).get().matches(other.get(property).get())){
+                } else if (!thisProps.get(property).get().matches(otherProps.get(property).get())){
                     return false;
                 }
             }
@@ -1634,7 +1770,7 @@ public class Parser {
     
     /**
      * Tries to match start time against end time in the case that this task doesn't have a start time
-     * and vice versa 
+     * and vice versa
      * @param other Other properties to compare against
      * @param property Property to compare on
      * @return true if property is start or end time and matches with this task, false otherwise
@@ -1642,36 +1778,20 @@ public class Parser {
     private boolean matchStartOrEndTime(HashMap<TaskProperties, Optional<TaskProperty>> other, TaskProperties property) {
     	if (property.equals(TaskProperties.STARTTIME)) {
 			if (!(this.properties.get(TaskProperties.ENDTIME).isPresent() &&
-					this.properties.get(TaskProperties.ENDTIME).get().matches(other.get(property).get()))) {
+				  this.properties.get(TaskProperties.ENDTIME).get().matches(other.get(property).get()))) {
 				return false;
 			} else {
 				return true;
 			}
 		} else if (property.equals(TaskProperties.ENDTIME)) {
 			if (!(this.properties.get(TaskProperties.STARTTIME).isPresent() &&
-					this.properties.get(TaskProperties.STARTTIME).get().matches(other.get(property).get()))) {
+				  this.properties.get(TaskProperties.STARTTIME).get().matches(other.get(property).get()))) {
 				return false;
 			} else {
 				return true;
 			}
 		} else {
 			return false;
-		}
-    }
-    
-    @Override
-    public int compareProperty(ReadOnlyTask other, TaskProperties property) {
-    	assert other != null;
-    	HashMap<TaskProperties, Optional<TaskProperty>> otherProps = other.getProperties();
-    	
-    	if (!this.properties.get(property).isPresent() && !otherProps.get(property).isPresent()) {
-			return 0;
-		} else if (!this.properties.get(property).isPresent()) {
-			return 1;
-		} else if (!otherProps.get(property).isPresent()) {
-			return -1;
-		} else {
-			return this.properties.get(property).get().compareTo(otherProps.get(property).get());
 		}
     }
     
@@ -1869,26 +1989,27 @@ public abstract class Time extends TaskProperty {
         return value;
     }
     
-    /**
 ```
 ###### /java/seedu/manager/model/UserPrefs.java
 ``` java
     public UserPrefs(){
         this.setGuiSettings(500, 500, 0, 0);
+        
         this.setCommandWords(
         		new Commands[]{
         				Commands.ADD, Commands.EDIT, Commands.DELETE, Commands.UNDO, 
         				Commands.FIND, Commands.STORAGE, Commands.CLEAR, Commands.DONE, 
-        				Commands.EXIT, Commands.HELP, Commands.LIST, Commands.SORT,
-        				Commands.UNSORT, Commands.ALIAS
+        				Commands.EXIT, Commands.HELP, Commands.LIST, Commands.SORTBY,
+        				Commands.ALIAS
     				},
         		new String[]{
         				"add", "edit", "delete", "undo", 
         				"find", "storage", "clear", "done", 
-        				"exit", "help", "list", "sort",
-        				"unsort", "alias"
+        				"exit", "help", "list", "sortby",
+        				"alias"
         			}
         		);
+        
         this.setExtensionsWords(
         		new Commands[]{
         				Commands.BY, Commands.AT, Commands.EVENT, Commands.PRIORITY, 
@@ -2117,5 +2238,19 @@ public abstract class Time extends TaskProperty {
             </columnConstraints>
             <children>
             	<HBox alignment="CENTER_LEFT" fx:id="overdue" maxWidth="10.0" minWidth="10.0" prefWidth="10.0" GridPane.columnIndex="0">
+                </HBox>
+```
+###### /resources/view/TaskListCard.fxml
+``` fxml
+                <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="2">
+                	<padding>
+                        <Insets bottom="5" left="5" right="35" top="40" />
+                    </padding>
+                    
+                    <children>
+ 	                	<HBox>
+ 	                    	<Label fx:id="done" styleClass="cell_small_label" text="\$done" />
+                    	</HBox>
+                    </children>
                 </HBox>
 ```
