--- a/collated/main/A0147924X.md
+++ b/collated/main/A0147924X.md
@@ -36,6 +36,11 @@ public class CommandWord {
 ###### /java/seedu/manager/commons/core/Config.java
 ``` java
     @Subscribe
+    /**
+     * Saves the config file and raises a new event indicating that the config file
+     * has changed, when the storage location changes
+     * @param event Event indicating that the storage location has changed
+     */
     public void handleStorageLocationChangedEvent(StorageLocationChangedEvent event) {
     	setTaskManagerFilePath(event.getFilePath());
     	try {
@@ -730,15 +735,31 @@ public class StorageCommand extends Command {
 		return new CommandResult(feedbackToUser);
 	}
 	
+	/**
+	 * Checks whether the file path has .xml extension
+	 * @param filePath File path to be checked
+	 * @return True if it has .xml extension, false if not
+	 */
 	private boolean hasXmlExtension(String filePath) {
 		return filePath.endsWith(".xml") && !filePath.equals("");
 	}
 	
+	/**
+	 * Checks whether the file at a file path already exists
+	 * @param filePath File path to be checked
+	 * @return True if a file already exists at the given path, false if not
+	 */
 	private boolean doesfileAlreadyExist(String filePath) {
 		File file = new File(filePath);
 		return file.exists();
 	}
 	
+	/**
+	 * Checks whether the task manager is allowed to overwrite
+	 * the already existing file at a file path
+	 * @param filePath File path to be checked
+	 * @return True if file can be overwritten, false if not
+	 */
 	private boolean canOverWriteExisting(String filePath) {
 		try {
 			File file = new File(filePath).getParentFile();
@@ -748,6 +769,11 @@ public class StorageCommand extends Command {
 		}
 	}
 	
+	/**
+	 * Checks whether the task manager can write to a file path
+	 * @param filePath File path to be checked
+	 * @return True if can write to the file path, false if not
+	 */
 	private boolean canWriteToFile(String filePath) {
 		try {
 			File file = new File(filePath).getParentFile();
@@ -947,7 +973,6 @@ public class ExtensionParser {
     
 	/**
 	 * Throws an exception if duplicate properties are specified
-	 * 
 	 * @param properties Properties to look in.
 	 * @param taskProperty Property to check.
 	 * @param extensionCmd Command that caused duplication.
@@ -960,7 +985,13 @@ public class ExtensionParser {
             throw new IllegalValueException(String.format(EXTENSION_DUPLICATES, extensionWords.get(extensionCmd)));
         }
     }
-
+    
+    /**
+     * Adds an event (start time and end time) to the task manager
+     * @param properties The current task properties
+     * @param arguments Arguments containing the start and end time
+     * @throws IllegalValueException
+     */
     private void addEvent(HashMap<TaskProperties, Optional<String>> properties, String arguments)
     		     throws IllegalValueException {
         Matcher matcher = EVENT_ARGS_FORMAT.matcher(arguments);
