--- a/collated/docs/A0139621H.md
+++ b/collated/docs/A0139621H.md
@@ -1,10 +1,100 @@
 # A0139621H
-###### \UserGuide.md
+###### /UserGuide.md
+``` md
+<a id="done"></a>
+#### Ticking off tasks: `done`
+_Perhaps the most satisfying command! Let's you mark a task as done._<br>
+Format: `done <task number>`
+
+> Task number specifies which out of the tasks on the screen you wish to tick off
+
+Examples:
+ * `done 1`
+ * `done 3`
+
+
+
+<a id="undo"></a>
+#### Undo previous action: `undo`
+_Made a mistake? Fret not! Just use this keyword to revert the last action that you did!_<br>
+Format: `undo`
+
+> * Can be used more than once. <br>
+> * Cannot be used if you close TaskNinja and reopen it; the temporary history of commands that you use will be cleared and there will be nothing for TaskNinja to undo. <br>
+> * The commands that you can undo are: add, edit, delete and alias
+> * All extension commands cannot be undone, by default.
+
+Example:
+  * `undo`
+
+
+<a id="sortby"></a>
+#### Sortby: `sortby`
+_Sorts your task list either by time, or by priority._<br>
+Format: `sortby time/priority`
+
+> Even if priority or time have been aliased, this command will still use the words priority and time
+
+Examples:
+  * `sortby time`
+  * `sortby priority`
+
+
+<a id="storage"></a>
+#### Specify a storage folder: `storage`
+_Allows you to edit the storage file._<br>
+Format: `storage <path/to/file/fileName.xml>`
+
+> The file's name must have a .xml extension. <br>
+
+Example:
+  * `storage data/TaskNinja.xml`
+
+
+<a id="alias"></a>
+#### Alias Commands: `alias`
+_If you're an advanced user, you may replace our existing commands with a keyword of your own!_<br>
+Format: `alias <command name> <new command name>`
+
+> * Take note that you cannot replace a command with a keyword that is already in use. <br>
+> * To a command's alias, simply use help for that command. <br>
+
+Examples:
+  * `alias add +`
+  * `alias + add`
+  * `alias priority p`
+
+
+<a id="clear"></a>
+#### Clear: `clear`
+_Wipes off all tasks and tags from TaskNinja._<br>
+Format: `clear`
+
+> * *WARNING*: This command is irreversible! It cannot be undone even with the `undo` command! <br>
+> * You should hence be VERY sure if you wish to use this command at any point in time, unless you have saved your tasks to another .xml file! <br>
+
+
+<a id="exit"></a>
+#### Exiting Task Ninja: `exit`
+_This command closes Task Ninja. Hope to see you back soon!_<br>
+Format: `exit`
+
+Example:
+  * `exit`
+
+
+#### Saving the data
+Tasks are saved in the hard disk automatically after any command that changes the data.<br>
+There is no need to save manually.
+
+
+```
+###### /UserGuide.md
 ``` md
 # Appendix A
 _This appendix lists down all the inputs of dates and times that are accepted when adding/editing a task._<br>
 _As we are using PrettyTime parser to read in dates and times, we strongly recommend you to follow this table in order to let you have the best experience when using Task Ninja!_<br>
-_You may also refer to the examples in [Event](#from-to) and [Before](#before) sections for an overview of how to input your dates and times when adding/editing your task._<br>
+_You may also refer to the examples in [Event](#from-to), [At](#at) and [By](#by) sections for an overview of how to input your dates and times when adding/editing your task._<br>
 
 > * The current time (in HH:MM:SS) will be timestamped to your tasks should you decide not to enter a time.
 > * The following examples use Wed 19 Oct 12:00:00 2016 as the current time and date, unless otherwise specified
@@ -13,14 +103,14 @@ Input | Read in as | Comments
 ----- | :--------: | ------- |
 `2am` | Wed Oct 19 02:00:00 | 12-hour format
 `2AM` | Wed Oct 19 02:00:00 | Not case-sensitive
-`2pm` | Wed Oct 19 14:00:00 | 
-`3:30am` | Wed Oct 19 03:30:00 | 
+`2pm` | Wed Oct 19 14:00:00 |
+`3:30am` | Wed Oct 19 03:30:00 |
 `4:45pm` |  Wed Oct 19 16:45:00 |
 `0515` | Wed Oct 19 05:15:00 | 24-hour format
 `1700` | Wed Oct 19 17:00:00 |
 `6:00` | Wed Oct 19 06:00:00 |
 `07:55` | Wed Oct 19 07:55:00 |
-`19:59` | Wed Oct 19 19:59:00 | 
+`19:59` | Wed Oct 19 19:59:00 |
 `20 November` | Sun Nov 20 12:00:00 | Uses current time by default
 `22 January '17` | Sun Jan 22 12:00:00 2017 | Uses an apostrophe in shortened year
 `23rd February 2017` | Tue Feb 23 12:00:00 2017 | Numerals (st, nd, rd, th) are accepted
