--- a/collated/docs/A0148042M.md
+++ b/collated/docs/A0148042M.md
@@ -1,12 +1,12 @@
 # A0148042M
-###### \DeveloperGuide.md
+###### /DeveloperGuide.md
 ``` md
 ## Appendix C : Non Functional Requirements
 
 1. Should work on any [mainstream OS](#mainstream-os) as long as it has Java `1.8.0_60` or higher installed.
 2. Should be able to hold up to 1000 tasks.
 3. Should come with automated unit tests and open source code.
-4. Should open within 1 second.
+4. Should open within 2 second.
 5. Should complete all operations within 0.5 seconds.
 6. Should not require an internet connection to work.
 7. Should not require installation to work.
@@ -16,7 +16,7 @@
 
 ##### Mainstream OS
 
-> Windows, Linux, Unix, OS-X
+> Windows, Linux, Unix, macOS
 
 ##### Floating Task
 
