--- a/collated/main/A0148003U.md
+++ b/collated/main/A0148003U.md
@@ -6,9 +6,7 @@
     	assert model != null;
         try {
             model.deleteTask(toAdd);
-            if (toAdd.getTag().isPresent()) {
-                model.deleteTag((Tag) toAdd.getTag().get());
-            }
+            deleteTasksTagFromModel(toAdd);
         } catch (TaskNotFoundException pnfe) {
             assert false : "The target task cannot be missing";
         }
@@ -49,9 +47,7 @@
     	 assert model != null;
          try {
              model.addTask(taskToDelete);
-             if (taskToDelete.getTag().isPresent()) {
-                 model.addTag((Tag) taskToDelete.getTag().get());
-             }
+             addTasksTagToModel(taskToDelete);
              jumpToTask(taskToDelete);
              
              return new CommandResult(String.format(UNDO_SUCCESS, taskToDelete));
